--- a/data/dimensions_manifest.json
+++ b/data/dimensions_manifest.json
@@ -1,11 +1,11 @@
 {
-  "source": "data\\dimensions",
-  "output": "data\\dimensions_parquet",
+  "source": "data/dimensions",
+  "output": "data/dimensions_parquet",
   "tables": [
     {
       "name": "Dim_AGED",
-      "csv_file": "data\\dimensions\\Dim_AGED.csv",
-      "parquet_file": "data\\dimensions_parquet\\Dim_AGED.parquet",
+      "csv_file": "data/dimensions/Dim_AGED.csv",
+      "parquet_file": "data/dimensions_parquet/Dim_AGED.parquet",
       "n_rows": 97,
       "n_cols": 4,
       "columns": [
@@ -24,8 +24,8 @@
     },
     {
       "name": "Dim_AGEREV",
-      "csv_file": "data\\dimensions\\Dim_AGEREV.csv",
-      "parquet_file": "data\\dimensions_parquet\\Dim_AGEREV.parquet",
+      "csv_file": "data/dimensions/Dim_AGEREV.csv",
+      "parquet_file": "data/dimensions_parquet/Dim_AGEREV.parquet",
       "n_rows": 96,
       "n_cols": 4,
       "columns": [
@@ -44,8 +44,8 @@
     },
     {
       "name": "Dim_AGEREVQ",
-      "csv_file": "data\\dimensions\\Dim_AGEREVQ.csv",
-      "parquet_file": "data\\dimensions_parquet\\Dim_AGEREVQ.parquet",
+      "csv_file": "data/dimensions/Dim_AGEREVQ.csv",
+      "parquet_file": "data/dimensions_parquet/Dim_AGEREVQ.parquet",
       "n_rows": 21,
       "n_cols": 4,
       "columns": [
@@ -64,8 +64,8 @@
     },
     {
       "name": "Dim_ANAI",
-      "csv_file": "data\\dimensions\\Dim_ANAI.csv",
-      "parquet_file": "data\\dimensions_parquet\\Dim_ANAI.parquet",
+      "csv_file": "data/dimensions/Dim_ANAI.csv",
+      "parquet_file": "data/dimensions_parquet/Dim_ANAI.parquet",
       "n_rows": 100,
       "n_cols": 4,
       "columns": [
@@ -84,8 +84,8 @@
     },
     {
       "name": "Dim_CS",
-      "csv_file": "data\\dimensions\\Dim_CS.csv",
-      "parquet_file": "data\\dimensions_parquet\\Dim_CS.parquet",
+      "csv_file": "data/dimensions/Dim_CS.csv",
+      "parquet_file": "data/dimensions_parquet/Dim_CS.parquet",
       "n_rows": 29,
       "n_cols": 4,
       "columns": [
@@ -104,8 +104,8 @@
     },
     {
       "name": "Dim_DIPL",
-      "csv_file": "data\\dimensions\\Dim_DIPL.csv",
-      "parquet_file": "data\\dimensions_parquet\\Dim_DIPL.parquet",
+      "csv_file": "data/dimensions/Dim_DIPL.csv",
+      "parquet_file": "data/dimensions_parquet/Dim_DIPL.parquet",
       "n_rows": 12,
       "n_cols": 4,
       "columns": [
@@ -124,8 +124,8 @@
     },
     {
       "name": "Dim_EMPL",
-      "csv_file": "data\\dimensions\\Dim_EMPL.csv",
-      "parquet_file": "data\\dimensions_parquet\\Dim_EMPL.parquet",
+      "csv_file": "data/dimensions/Dim_EMPL.csv",
+      "parquet_file": "data/dimensions_parquet/Dim_EMPL.parquet",
       "n_rows": 9,
       "n_cols": 4,
       "columns": [
@@ -144,8 +144,8 @@
     },
     {
       "name": "Dim_GS",
-      "csv_file": "data\\dimensions\\Dim_GS.csv",
-      "parquet_file": "data\\dimensions_parquet\\Dim_GS.parquet",
+      "csv_file": "data/dimensions/Dim_GS.csv",
+      "parquet_file": "data/dimensions_parquet/Dim_GS.parquet",
       "n_rows": 6,
       "n_cols": 4,
       "columns": [
@@ -164,8 +164,8 @@
     },
     {
       "name": "Dim_ILETUDLT",
-      "csv_file": "data\\dimensions\\Dim_ILETUDLT.csv",
-      "parquet_file": "data\\dimensions_parquet\\Dim_ILETUDLT.parquet",
+      "csv_file": "data/dimensions/Dim_ILETUDLT.csv",
+      "parquet_file": "data/dimensions_parquet/Dim_ILETUDLT.parquet",
       "n_rows": 8,
       "n_cols": 4,
       "columns": [
@@ -184,8 +184,8 @@
     },
     {
       "name": "Dim_ILRLT",
-      "csv_file": "data\\dimensions\\Dim_ILRLT.csv",
-      "parquet_file": "data\\dimensions_parquet\\Dim_ILRLT.parquet",
+      "csv_file": "data/dimensions/Dim_ILRLT.csv",
+      "parquet_file": "data/dimensions_parquet/Dim_ILRLT.parquet",
       "n_rows": 5,
       "n_cols": 4,
       "columns": [
@@ -204,8 +204,8 @@
     },
     {
       "name": "Dim_IPONDI",
-      "csv_file": "data\\dimensions\\Dim_IPONDI.csv",
-      "parquet_file": "data\\dimensions_parquet\\Dim_IPONDI.parquet",
+      "csv_file": "data/dimensions/Dim_IPONDI.csv",
+      "parquet_file": "data/dimensions_parquet/Dim_IPONDI.parquet",
       "n_rows": 1,
       "n_cols": 4,
       "columns": [
@@ -224,8 +224,8 @@
     },
     {
       "name": "Dim_IRANLT",
-      "csv_file": "data\\dimensions\\Dim_IRANLT.csv",
-      "parquet_file": "data\\dimensions_parquet\\Dim_IRANLT.parquet",
+      "csv_file": "data/dimensions/Dim_IRANLT.csv",
+      "parquet_file": "data/dimensions_parquet/Dim_IRANLT.parquet",
       "n_rows": 7,
       "n_cols": 4,
       "columns": [
@@ -244,8 +244,8 @@
     },
     {
       "name": "Dim_METRODOMLT",
-      "csv_file": "data\\dimensions\\Dim_METRODOMLT.csv",
-      "parquet_file": "data\\dimensions_parquet\\Dim_METRODOMLT.parquet",
+      "csv_file": "data/dimensions/Dim_METRODOMLT.csv",
+      "parquet_file": "data/dimensions_parquet/Dim_METRODOMLT.parquet",
       "n_rows": 2,
       "n_cols": 4,
       "columns": [
@@ -264,8 +264,8 @@
     },
     {
       "name": "Dim_NA10",
-      "csv_file": "data\\dimensions\\Dim_NA10.csv",
-      "parquet_file": "data\\dimensions_parquet\\Dim_NA10.parquet",
+      "csv_file": "data/dimensions/Dim_NA10.csv",
+      "parquet_file": "data/dimensions_parquet/Dim_NA10.parquet",
       "n_rows": 10,
       "n_cols": 4,
       "columns": [
@@ -284,8 +284,8 @@
     },
     {
       "name": "Dim_NA17",
-      "csv_file": "data\\dimensions\\Dim_NA17.csv",
-      "parquet_file": "data\\dimensions_parquet\\Dim_NA17.parquet",
+      "csv_file": "data/dimensions/Dim_NA17.csv",
+      "parquet_file": "data/dimensions_parquet/Dim_NA17.parquet",
       "n_rows": 17,
       "n_cols": 4,
       "columns": [
@@ -304,8 +304,8 @@
     },
     {
       "name": "Dim_NA38",
-      "csv_file": "data\\dimensions\\Dim_NA38.csv",
-      "parquet_file": "data\\dimensions_parquet\\Dim_NA38.parquet",
+      "csv_file": "data/dimensions/Dim_NA38.csv",
+      "parquet_file": "data/dimensions_parquet/Dim_NA38.parquet",
       "n_rows": 38,
       "n_cols": 4,
       "columns": [
@@ -324,8 +324,8 @@
     },
     {
       "name": "Dim_NA5",
-      "csv_file": "data\\dimensions\\Dim_NA5.csv",
-      "parquet_file": "data\\dimensions_parquet\\Dim_NA5.parquet",
+      "csv_file": "data/dimensions/Dim_NA5.csv",
+      "parquet_file": "data/dimensions_parquet/Dim_NA5.parquet",
       "n_rows": 5,
       "n_cols": 4,
       "columns": [
@@ -344,8 +344,8 @@
     },
     {
       "name": "Dim_NA64",
-      "csv_file": "data\\dimensions\\Dim_NA64.csv",
-      "parquet_file": "data\\dimensions_parquet\\Dim_NA64.parquet",
+      "csv_file": "data/dimensions/Dim_NA64.csv",
+      "parquet_file": "data/dimensions_parquet/Dim_NA64.parquet",
       "n_rows": 64,
       "n_cols": 4,
       "columns": [
@@ -364,8 +364,8 @@
     },
     {
       "name": "Dim_NA88",
-      "csv_file": "data\\dimensions\\Dim_NA88.csv",
-      "parquet_file": "data\\dimensions_parquet\\Dim_NA88.parquet",
+      "csv_file": "data/dimensions/Dim_NA88.csv",
+      "parquet_file": "data/dimensions_parquet/Dim_NA88.parquet",
       "n_rows": 88,
       "n_cols": 4,
       "columns": [
@@ -384,8 +384,8 @@
     },
     {
       "name": "Dim_REGLT",
-      "csv_file": "data\\dimensions\\Dim_REGLT.csv",
-      "parquet_file": "data\\dimensions_parquet\\Dim_REGLT.parquet",
+      "csv_file": "data/dimensions/Dim_REGLT.csv",
+      "parquet_file": "data/dimensions_parquet/Dim_REGLT.parquet",
       "n_rows": 17,
       "n_cols": 4,
       "columns": [
@@ -404,8 +404,8 @@
     },
     {
       "name": "Dim_SEXE",
-      "csv_file": "data\\dimensions\\Dim_SEXE.csv",
-      "parquet_file": "data\\dimensions_parquet\\Dim_SEXE.parquet",
+      "csv_file": "data/dimensions/Dim_SEXE.csv",
+      "parquet_file": "data/dimensions_parquet/Dim_SEXE.parquet",
       "n_rows": 2,
       "n_cols": 4,
       "columns": [
@@ -424,8 +424,8 @@
     },
     {
       "name": "Dim_STAT",
-      "csv_file": "data\\dimensions\\Dim_STAT.csv",
-      "parquet_file": "data\\dimensions_parquet\\Dim_STAT.parquet",
+      "csv_file": "data/dimensions/Dim_STAT.csv",
+      "parquet_file": "data/dimensions_parquet/Dim_STAT.parquet",
       "n_rows": 4,
       "n_cols": 4,
       "columns": [
@@ -444,8 +444,8 @@
     },
     {
       "name": "Dim_TACTD16",
-      "csv_file": "data\\dimensions\\Dim_TACTD16.csv",
-      "parquet_file": "data\\dimensions_parquet\\Dim_TACTD16.parquet",
+      "csv_file": "data/dimensions/Dim_TACTD16.csv",
+      "parquet_file": "data/dimensions_parquet/Dim_TACTD16.parquet",
       "n_rows": 6,
       "n_cols": 4,
       "columns": [
@@ -464,8 +464,8 @@
     },
     {
       "name": "Dim_TP",
-      "csv_file": "data\\dimensions\\Dim_TP.csv",
-      "parquet_file": "data\\dimensions_parquet\\Dim_TP.parquet",
+      "csv_file": "data/dimensions/Dim_TP.csv",
+      "parquet_file": "data/dimensions_parquet/Dim_TP.parquet",
       "n_rows": 2,
       "n_cols": 4,
       "columns": [
@@ -484,8 +484,8 @@
     },
     {
       "name": "Dim_TRANS",
-      "csv_file": "data\\dimensions\\Dim_TRANS.csv",
-      "parquet_file": "data\\dimensions_parquet\\Dim_TRANS.parquet",
+      "csv_file": "data/dimensions/Dim_TRANS.csv",
+      "parquet_file": "data/dimensions_parquet/Dim_TRANS.parquet",
       "n_rows": 6,
       "n_cols": 4,
       "columns": [
@@ -504,8 +504,8 @@
     },
     {
       "name": "Dim_ZELT",
-      "csv_file": "data\\dimensions\\Dim_ZELT.csv",
-      "parquet_file": "data\\dimensions_parquet\\Dim_ZELT.parquet",
+      "csv_file": "data/dimensions/Dim_ZELT.csv",
+      "parquet_file": "data/dimensions_parquet/Dim_ZELT.parquet",
       "n_rows": 305,
       "n_cols": 4,
       "columns": [
